MMT-2135 updated style sheet to fix div alignment problem.

--- a/app/assets/stylesheets/components/_metadata-preview.scss
+++ b/app/assets/stylesheets/components/_metadata-preview.scss
@@ -150,6 +150,7 @@ ul.sub-field {
 
   .collection-title {
     min-width: 900px;
+    float: left;
 
     h1 {
       float: left;
